--- a/templates/envrc.j2
+++ b/templates/envrc.j2
@@ -1,4 +1,5 @@
 export PATH="./bin:./node_modules/.bin:$PATH"
+export NODE_PATH="{{ deploy_release_dir }}:$NODE_PATH"
 {% if deploy_tmp_dir is defined %}
 export TMPDIR="{{ deploy_tmp_dir }}"
 {% endif %}
