--- a/templates/envrc.j2
+++ b/templates/envrc.j2
@@ -1,5 +1,12 @@
 export PATH="./bin:./node_modules/.bin:$PATH"
 export NODE_PATH="{{ deploy_release_dir }}:$NODE_PATH"
+{% if not (deploy_environment.LANG is defined
+  or deploy_environment.LC_ALL is defined
+  or deploy_environment.LC_CTYPE is defined) %}
+export LANG="en_US.UTF-8"
+export LC_ALL="en_US.UTF-8"
+export LC_CTYPE="en_US.UTF-8"
+{% endif %}
 {% if deploy_tmp_dir is defined %}
 export TMPDIR="{{ deploy_tmp_dir }}"
 {% endif %}
